update pom.xml, pass options object instead of individual parameters, make outputFile a Path object, throw IllegalArgumentException if inputPath/outputPath are the same, use FileNotFoundException, write to /target directory and delete file in @AfterEach, fix tests